# MyChatty

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
docs/: code-interpreter.md
src/app/: main.cpp
src/app/qml/: AttachmentMenu.qml  AttachmentMenuIcon.qml  AttachmentMenuRow.qml  ChatBubble.qml  Chevron.qml  Composer.qml  IconButton.qml  LabeledSecretField.qml  Main.qml  MicrophoneIcon.qml  ModelEffortSelector.qml  SettingsSheet.qml  Sidebar.qml
src/cli/: main.cpp
src/core/: ApiClient.cpp  ApiClient.h  ApiProtocolAdapter.cpp  ApiProtocolAdapter.h  ChatController.cpp  ChatController.h  ChatMessageModel.cpp  ChatMessageModel.h  ChatSerializer.cpp  ChatSerializer.h  ChatTypes.cpp  ChatTypes.h  ConversationFileStore.cpp  ConversationFileStore.h  ConversationStore.cpp  ConversationStore.h  MarkdownRenderer.cpp  MarkdownRenderer.h  ModelCatalog.cpp  ModelCatalog.h  OpenaiChatAPI.cpp  OpenaiChatAPI.h  OpenaiResponsesAPI.cpp  OpenaiResponsesAPI.h  SettingsStore.cpp  SettingsStore.h  SpeechService.cpp  SpeechService.h  SseParser.cpp  SseParser.h  ToolExecutor.cpp  ToolExecutor.h
tests/: test_core.cpp
